# ghommit

./: .gitignore  Cargo.toml  Dockerfile  README.md  action.yaml
script/: gen_minisig_base64.py
src/: config.rs  create_a_tree_prep.rs  git_status.rs  github.rs  lib.rs  log.rs  main.rs  test_utils.rs
tests/: github_tests.rs
