[package]
name = "ghommit"
version = "0.0.7-dev"
edition = "2024"

[profile.release]
strip = "debuginfo"

[dependencies]
base64 = "0.21.0"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
git2 = "0.18.2"
jsonwebtoken = "8.3.0"
openssl = { version = "0.10.60", features = ["vendored"] }
once_cell = "1.17.1"
regex = "1.8.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
time = "0.3.41"

[dev-dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
sha-1 = "0.10.1"
tempfile = "3.9.0"
