[package]
name = "ghommit"
version = "0.0.7-dev"
edition = "2024"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
strip = "symbols"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
git2 = "0.20.2"
jsonwebtoken = "9.3.1"
openssl = { version = "0.10.72", features = ["vendored"] }
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = "0.3.41"

[dev-dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
sha-1 = "0.10.1"
tempfile = "3.20.0"
